--- a/MyLogger2/MyLocationLogger/app/src/main/res/layout/activity_add.xml
+++ b/MyLogger2/MyLocationLogger/app/src/main/res/layout/activity_add.xml
@@ -13,7 +13,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="최근 위치 위도값 :"
+        android:text="현재 위치 위도값 :"
         android:id="@+id/textView"
         android:layout_alignParentTop="true"
         android:layout_alignParentLeft="true"
@@ -22,7 +22,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="최근 위치 경도값 :"
+        android:text="현재 위치 경도값 :"
         android:id="@+id/textView2"
         android:layout_below="@+id/textView"
         android:layout_alignParentLeft="true"
